Fix authenticate view shifting

--- a/public/style.css
+++ b/public/style.css
@@ -24,3 +24,7 @@ body, label {
 .radios svg {
   color: #666;
 }
+
+.wrap-loading {
+  height: 500px;
+}
